Project economic_school {
  database_type: 'PostgreSQL'
  Note: '''
    # Economic School Database
  '''
}


Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  user_type int [not null, default: 1]
  profile_image_url varchar [not null, default:'default_profile_image.jpg']
  is_email_verified bool [not null, default: false]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
  version int [not null]
}

Table verify_emails {
  id bigserial [pk]
  username varchar [not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '24 hours'`]
}
Ref: verify_emails.username > users.username [delete: cascade]

Table password_reset_emails {
  id bigserial [pk]
  username varchar [not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '24 hours'`]
}
Ref: password_reset_emails.username > users.username [delete: cascade]

Table email_logs as EL {
  id bigserial [pk]
  email varchar [not null]
  bounce_count int
  created_at timestamptz [not null, default: `now()`]
}

Table sessions {
  id uuid [pk]
  username varchar [not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
}
Ref: sessions.username > users.username [delete: cascade]

Table exams as E {
  exam_id serial [pk]
  university varchar [not null]
  subject varchar [not null]
  year int [not null]
  question_num int [not null]
  question_pdf_url varchar
  answer_pdf_url varchar
  video_url varchar
  critique_url varchar
  created_at timestamptz [not null, default: `now()`]
}

Table user_exams as UE {
  username varchar [pk]
  exam_id int [pk]
  university varchar [not null]
  is_completed bool [not null, default: true]
  completed_at timestamptz [default: `now()`]
}
Ref: user_exams.username > users.username [delete: cascade]
Ref: user_exams.exam_id > exams.exam_id [delete: cascade]

Table global_ranking as GR {
  username varchar [pk]
  num_completed_exams int [not null]
  ranking int [not null]
  ranking_date varchar [not null]
  created_at timestamptz [not null, default: `now()`]
}
Ref: global_ranking.username > users.username [delete: cascade]

Table university_ranking as UR {
  username varchar [not null]
  university varchar [not null]
  num_completed_exams int [not null]
  ranking int [not null]
  ranking_date varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (university, username, ranking_date) [pk]
  }
}
Ref: university_ranking.username > users.username [delete: cascade]

Table weekly_global_ranking as WGR {
  username varchar [not null]
  completed_exams_count int [not null]
  ranking int [not null]
  ranking_date varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
      (username, ranking_date) [pk]
    }
}
Ref: weekly_global_ranking.username > users.username [delete: cascade]

Table weekly_university_ranking as WUR {
  username varchar [not null]
  university varchar [not null]
  completed_exams_count int [not null]
  ranking int [not null]
  ranking_date varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (university, username, ranking_date) [pk]
  }
}
Ref: weekly_university_ranking.username > users.username [delete: cascade]
